[project]
name = "sig-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pyside6>=6.9.1",
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
    "smbprotocol>=1.15.0",
    "webdavclient3>=3.14.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
testpaths = ["vault/tests"]
addopts = "--cov=vault --cov-report=html --cov-config=pyproject.toml --cov-fail-under=0 --cov-branch"

[tool.coverage.run]
omit = ["main.py", "vault/tests/*"]
